javafx setup and added to build